# aiogram-bot-template

./: .env.example  .gitignore  Dockerfile  README.md  dev_server.py  pyproject.toml  railway.toml  render.yaml  start.py
.github/workflows/: ci.yml
app/: bot.py  config.py  main.py
app/handlers/: __init__.py  admin.py  cart.py  menu.py  order.py  start.py
app/keyboards/: inline.py  webapp.py
app/middlewares/: db.py
app/models/: __init__.py  cart.py  category.py  order.py  product.py  restaurant.py  user.py
app/services/: __init__.py  cart.py  order.py  restaurant.py  user.py
app/webapp/: routes.py
app/webapp/templates/: index.html
app/webapp/templates/static/css/: style.css
app/webapp/templates/static/js/: app.js
database/: engine.py
tests/: conftest.py  test_keyboards.py  test_middleware.py  test_models.py  test_services.py  test_webapp.py
