[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "food-delivery-bot"
version = "1.0.0"
description = "Telegram WebApp bot for food ordering and delivery"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.15,<4",
    "aiohttp>=3.10,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "aioresponses>=0.7",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools.packages.find]
include = ["app*", "database*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
